--- a/src/assets/styling/scss/fonts.scss
+++ b/src/assets/styling/scss/fonts.scss
@@ -3,3 +3,4 @@ $font-xsmall: calc(10px + 0.3vw);
 $font-small: calc(11px + 0.4vw);
 $font-med: calc(14px + 0.5vw);
 $font-big: calc(16px + 0.7vw);
+$font-xbig: calc(18px + 0.75vw);
