--- a/src/assets/styling/scss/reset.scss
+++ b/src/assets/styling/scss/reset.scss
@@ -6,7 +6,9 @@ html,
 body,
 #___gatsby,
 #gatsby-focus-wrapper {
-  height: 100%;
+  height: 100vh !important;
+  width: 100vw !important;
+  overflow: hidden;
 }
 
 * {
