--- a/src/assets/styling/scss/fonts.scss
+++ b/src/assets/styling/scss/fonts.scss
@@ -1,6 +1,7 @@
 $font-xxsmall: calc(9px + 0.2vw);
 $font-xsmall: calc(10px + 0.3vw);
 $font-small: calc(11px + 0.4vw);
-$font-med: calc(14px + 0.5vw);
+$font-med: calc(12px + 0.45vw);
+$font-xmed: calc(14px + 0.5vw);
 $font-big: calc(16px + 0.6vw);
 $font-xbig: calc(18px + 0.75vw);
