--- a/src/assets/styling/scss/reset.scss
+++ b/src/assets/styling/scss/reset.scss
@@ -14,7 +14,7 @@ body,
 * {
   margin: 0;
   padding: 0;
-  font-family: monospace;
+  font-family: monospace !important;
   font-size: $font-med;
 }
 
