--- a/src/components/MainComponents/BottomMenu/BottomMenu.module.scss
+++ b/src/components/MainComponents/BottomMenu/BottomMenu.module.scss
@@ -26,10 +26,22 @@ div[class^="MuiModal-root"] {
     width: 70vw;
     height: 70vh;
     padding: 2.5%;
+    overflow: auto;
+
+    #modalTitle,
+    p {
+      line-height: 2em;
+    }
 
     #modalTitle {
       color: $primaryYellow;
       font-weight: bold;
+      font-size: $font-big;
+    }
+
+    p {
+      font-size: $font-med;
+      margin-top: 2%;
     }
   }
 }
