--- a/src/pages/Home/Styles/index.module.scss
+++ b/src/pages/Home/Styles/index.module.scss
@@ -8,6 +8,10 @@
 $firstAnimationDuration: 3s;
 
 .mainPage {
+  @include screen(max-sm) {
+    overflow: hidden;
+  }
+
   width: 100%;
   height: 100%;
   background: url("../../../assets/images/globo_urca.jpg") center center no-repeat;
