--- a/src/assets/styling/scss/globals.module.scss
+++ b/src/assets/styling/scss/globals.module.scss
@@ -11,6 +11,10 @@ $headerColor: $dark;
   height: 100vh;
 }
 
+.fullWidth {
+  width: 100vw;
+}
+
 // .mainInput {
 //   background-color: transparent;
 //   border: none;
