--- a/src/components/Templates/Overlay/Overlay.module.scss
+++ b/src/components/Templates/Overlay/Overlay.module.scss
@@ -3,7 +3,7 @@
 .overlay {
   position: absolute;
   min-width: 100vw;
-  min-height: 100vh;
+  height: 93vh;
   top: 0;
   z-index: 1;
   @include overlay(0.7);
